<resources>
    <string name="app_name">WHCS Android</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="BSConnectionTitle">Base Station Connector</string>
    <string name="ScanForBlueTooth">Scan Devices</string>
    <string name="RefreshPairedDevices">Refresh Paired</string>
    <string name="PairedHeadline">Paired Devices</string>
    <string name="ActiveHeadline">Active Devices</string>
    <string name="title_activity_control_module_list">WHCS Android</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="speech">Speech</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="status">Status:</string>
    <string name="role">Control Module Role:</string>
    <string name="changeName">Change Name:</string>
    <string name="newNameHere">Type New Name Here</string>
    <string name="controlModulesHeadline">Control Modules</string>
    <string name="title_activity_control_module_details">Control Module Details</string>
    <string name="controlModuleGroups">Control Module Groups:</string>
    <string name="data_75">75</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
</resources>
