<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.whcs_ucf.whcs_android.ControlModuleDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryLight"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="5dp"
        android:text="@string/controlModulesHeadline"
        android:id="@+id/controlModuleTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:id="@+id/cmdLinearLayout">

        <com.dd.CircularProgressButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            app:cpb_selectorIdle="@drawable/whcs_button_selector"
            app:cpb_cornerRadius="12dp"
            app:cpb_textIdle="@string/save" />

        <com.dd.CircularProgressButton
            android:id="@+id/discardButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_selectorIdle="@drawable/whcs_button_selector"
            app:cpb_cornerRadius="12dp"
            app:cpb_textIdle="@string/discard" />


    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/controlModuleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:id="@+id/statusTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:id="@+id/statusIndicatorTextView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:background="@color/primarySuperLight"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeName"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:id="@+id/changeNameTextView"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeNameEditText"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            android:text="@string/newNameHere"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:id="@+id/roleTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium Text"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:id="@+id/roleIndicatorTextView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout3"
        android:layout_below="@+id/relativeLayout4"
        android:background="@color/primarySuperLight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controlModuleGroups"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:id="@+id/controlModuleGroupsTextView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/controlModuleGroupsTextView"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/n1"
                android:id="@+id/checkBox1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/n2"
                android:id="@+id/checkBox2"
                android:layout_alignTop="@+id/checkBox1"
                android:layout_toRightOf="@+id/checkBox1"
                android:layout_toEndOf="@+id/checkBox1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/n3"
                android:id="@+id/checkBox3"
                android:layout_alignTop="@+id/checkBox2"
                android:layout_toRightOf="@+id/checkBox2"
                android:layout_toEndOf="@+id/checkBox2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/n4"
                android:id="@+id/checkBox4"
                android:layout_alignTop="@+id/checkBox3"
                android:layout_toRightOf="@+id/checkBox3"
                android:layout_toEndOf="@+id/checkBox3" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/n5"
                android:id="@+id/checkBox5"
                android:layout_alignTop="@+id/checkBox4"
                android:layout_toRightOf="@+id/checkBox4"
                android:layout_toEndOf="@+id/checkBox4" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/n6"
                android:id="@+id/checkBox6"
                android:layout_alignTop="@+id/checkBox5"
                android:layout_toRightOf="@+id/checkBox5"
                android:layout_toEndOf="@+id/checkBox5" />

        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>