<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.whcs_ucf.whcs_android.ControlModuleListActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primaryLight"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingTop="5dp"
        android:text="@string/controlModulesHeadline"
        android:id="@+id/controlModulesTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/primary"
        android:id="@+id/linearLayout">

        <com.dd.CircularProgressButton
            android:id="@+id/speechButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            app:cpb_selectorIdle="@drawable/whcs_button_selector"
            app:cpb_cornerRadius="12dp"
            app:cpb_textIdle="@string/speech" />

        <com.dd.CircularProgressButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_selectorIdle="@drawable/whcs_button_selector"
            app:cpb_cornerRadius="12dp"
            app:cpb_textIdle="@string/edit" />


    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/controlModulesListView"
        android:layout_below="@+id/controlModulesTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
